# poetry-check-updates

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  config.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: format-lint-test.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  tailwind.config.js
docs/src/: math.ts
docs/src/styles/: custom.css
python-check-updates/: __init__.py  config.py  logging.py
tests/: test_config.py  test_logging.py
